# guess-the-model

./: .env.example  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep
backend/app/: config.py  database.py  main.py
backend/app/routes/: api.py
backend/app/tasks/: celery_app.py  sample_tasks.py
frontend/: Dockerfile  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/lib/: api.ts
